# QtTests

QtBroadcastReceiver/: CMakeLists.txt
QtBroadcastReceiver/src/: MainWindow.cpp  MainWindow.h
QtBroadcastSender/src/: MainWindow.cpp  MainWindow.h
QtDnsLookup/: Readme.txt
QtDnsLookup/src/: MainWindow.cpp  MainWindow.h
